WRR-31473: Fixed overlay outline style and background color for high contrast mode (#167)
### Checklist

* [x] I have read and understand the [contribution
guide](https://enactjs.com/docs/developer-guide/contributing/)
* [x] A [CHANGELOG
entry](https://enactjs.com/docs/developer-guide/contributing/changelogs/)
is included
* [ ] At least one test case is included for this feature or bug fix
* [x] Documentation was added or is not needed
* [ ] This is an API breaking change

### Issue Resolved / Feature Added
[//]: # (Describe the issue resolved or feature added by this pull
request)
Fixed overlay outline style and background color for high contrast mode

### Resolution
[//]: # (Does the code work as intended?)
[//]: # (What is the impact of this change and *why* was it made?)


### Additional Considerations
[//]: # (How should the change be tested?)
[//]: # (Are there any outstanding questions?)
[//]: # (Were any side-effects caused by the change?)


### Links
[//]: # (Related issues, references)
WRR-31473

### Comments

Enact-DCO-1.0-Signed-off-by: Ion Andrusciac
ion.andrusciac@lgepartner.com

---------

--- a/KeyGuide/KeyGuide.module.less
+++ b/KeyGuide/KeyGuide.module.less
@@ -78,6 +78,10 @@
 
 	.applySkins({
 		background: @lime-keyguide-container-color;
+		outline-color: @lime-keyguide-outline-color;
+		outline-width: @lime-overlay-outline-width;
+		outline-style: @lime-overlay-outline-style;
+		outline-offset: -@lime-overlay-outline-width;
 
 		.red {
 			background-color: @lime-keyguide-colordot-red-color;
